--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       background-color: #1e1e1e;
       color: white;
       font-size: 16px;
+      box-sizing: border-box;
     }
 
     button {
