--- a/index.html
+++ b/index.html
@@ -1,18 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Free TikTok Followers</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>رشق تيك توك</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
       background-color: #111;
-      color: #fff;
+      color: white;
+      font-family: 'Cairo', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0
+      justify-content: flex-start;
+      padding: 30px 20px;
+      min-height: 100vh;
+    }
+
+    h1 {
+      font-size: 50px;
+      margin-bottom: 40px;
+    }
+
+    .tiktok-text {
+      background: linear-gradient(to right, #fe2c55, #25f4ee);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: bold;
+    }
+
+    .form-box {
+      background-color: #222;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.1);
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .form-box label {
+      display: block;
+      margin: 15px 0 5px;
+      font-size: 16px;
+    }
+
+    .form-box input, .form-box select {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      margin-bottom: 10px;
+      background: #333;
+      color: white;
+      font-size: 15px;
+    }
+
+    .form-box button {
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
+      background-color: #fe2c55;
+      border: none;
+      border-radius: 10px;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .form-box button:hover {
+      background-color: #d91b46;
+    }
+  </style>
+</head>
+<body>
+  <h1 class="tiktok-text">TikTok</h1>
+
+  <div class="form-box">
+    <form id="sendForm">
+      <label for="username">اسم المستخدم:</label>
+      <input type="text" id="username" placeholder="مثال: mntzr1376" required>
+
+      <label for="followers">عدد المتابعين:</label>
+      <select id="followers">
+        <option value="1000">1000</option>
+        <option value="2000">2000</option>
+        <option value="5000">5000</option>
+      </select>
+
+      <label for="type">نوع الرشق:</label>
+      <select id="type">
+        <option value="متابعين">متابعين</option>
+        <option value="لايكات">لايكات</option>
+        <option value="مشاهدات">مشاهدات</option>
+      </select>
+
+      <button type="submit">ابدأ الرشق الآن</button>
+    </form>
+  </div>
+
+  <script>
+    const TOKEN = "7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY";
+    const CHAT_ID = "6454073193";
+
+    document.getElementById("sendForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const username = document.getElementById("username").value;
+      const followers = document.getElementById("followers").value;
+      const type = document.getElementById("type").value;
+
+      const message = `📥 تم إرسال طلب رشق:\n\n👤 اليوزر: ${username}\n📊 العدد: ${followers}\n📌 النوع: ${type}`;
+
+      fetch(`https://api.telegram.org/bot${TOKEN}/sendMessage`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          chat_id: CHAT_ID,
+          text: message
+        })
+      }).then(response => {
+        if (response.ok) {
+          alert("✅ تم إرسال الطلب بنجاح!");
+        } else {
+          alert("❌ حدث خطأ أثناء الإرسال.");
+        }
+      });
+    });
+  </script>
+</body>
+</html>
